- bruter_find has been splited into bruter_find and bruter_find_key;
- bruter_value_i renamed to bruter_value_int;
- bruter_value_u renamed to bruter_value_uint;
- bruter_value_f renamed to bruter_value_float;
- bruter_value_p renamed to bruter_value_pointer;
- added likely and unlikely macros, they are just like __builtin_expect.
- TODO: remove bruter_run;

(18/06/2025) - version 0.8.9

- bruter_call cannot receive NULL as context anymore, use bruter_run instead;
- some new functions from the reference documentation;
- new function: bruter_run, it receives a list and run it, just like bruter_call without the context;
- bruter_init renamed to bruter_new, seems more appropriate;

(15/06/2025) - version 0.8.8

- new optional type system;
- new macros BRUTER_KEYLESS and BRUTER_TYPELESS, they will not implement the key and/or the type system, be careful, once they are set, they cannot be unset;
- beware, if you set BRUTER_KEYLESS or BRUTER_TYPELESS, they will eventually change the function definitions too (e.g. list_push will not receive a key parameter anymore, it will just receive the value);

(31/05/2025) - version 0.8.7a

- new experimental function: bruter_concat;

(27/05/2025) - version 0.8.7

- all list_* are now prefixed as  bruter_*;
- all LIST_* macros are now prefixed as BRUTER_*;
- every function is now declared and defined static inline(though, the compiler might not inline them anyway);
- bruter is now a header-only library, you can just include bruter.h and use it;
- replaced value macros with equivalent inline functions;
- some fixes into bruter_copy;
- some safety checks added;

(19/05/2025) - version 0.8.6

- lists and tables share the same functions once again, just like it was but safer;
- when table, duplicate and init will set all the allocated memory for keys to NULL;
- new macro VALUE(type, value), it will create a new value of the type and set the value;
- all macros are now uppercase;
- removed Byte type;
- some fixes;
